Correction de l'alignement des items du footer

--- a/style.css
+++ b/style.css
@@ -690,7 +690,6 @@ footer{
 
 .footer-container{
     display: flex;
-    align-items: center;
     padding: 25px;
 }
 
